--- a/notebooks/Example of find_home function and methods.ipynb
+++ b/notebooks/Example of find_home function and methods.ipynb
@@ -476,9 +476,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (geo36ml)",
+   "display_name": "Python (twitteranalysis)",
    "language": "python",
-   "name": "geo36ml"
+   "name": "twitteranalysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
