find home incorporates hexagon home

--- a/notebooks/h3 examples.ipynb
+++ b/notebooks/h3 examples.ipynb
@@ -23098,6 +23098,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.tweets.create_index([('hex.9', pymongo.ASCENDING)], unique=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 335,
    "metadata": {},
    "outputs": [
