homelocation deprecation change

--- a/notebooks/Start Here Complete Procedure Guide.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<module 'analysis' from '../analysis.py'>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db=commu.connecttoLocaldb(database='buenosaires')"
+    "db=commu.connecttoLocaldb(database='twitter')"
    ]
   },
   {
@@ -128,20 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/rickhunter/miniconda3/envs/twitteranalysis/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  if (await self.run_code(code, result,  async_=asy)):\n"
+      "Now populating year  2015\n",
+      "process completed\n"
      ]
     }
    ],
    "source": [
-    "databasepopulation.populatetweets(db, path='/mnt/d/twitter/', cityprefix='ba', yearstart=2012, yearend=2012)\n"
+    "databasepopulation.populatetweets(db, path='/mnt/d/twitter/', cityprefix='ba', yearstart=2015, yearend=2015)\n"
    ]
   },
   {
