Changes to incorporate Sydney Data

--- a/notebooks/Start Here Complete Procedure Guide-SF-TEST.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide-SF-TEST.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "<module 'analysis' from '..\\\\analysis.py'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,31 +113,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db=commu.connecttoLocaldb(database='Twitter_Data')"
+    "db=commu.connecttoLocaldb(database='twitter_sf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'Twitter_Data'), 'Twitter_Data')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'twitter_sf'), 'twitter_sf')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.Twitter_Data"
+    "db.twitter_sf"
    ]
   },
   {
