Create San Francisco copy

--- a/notebooks/Start Here Complete Procedure Guide-SF-TEST.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide-SF-TEST.ipynb
@@ -141,6 +141,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twt_sf = pd.read_csv('C:/Users/emman/Box/Twitter data/North America/SANFRANCISCO_2012-2015.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
