query hex counts procedure

--- a/notebooks/Start Here Complete Procedure Guide.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "<module 'my_h3_functions' from '../my_h3_functions.py'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4104,17 +4104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.422412633895874\n"
+     ]
+    }
+   ],
    "source": [
+    "import time \n",
+    "start=time.time()\n",
     "df=a.hexcountsresults_to_df(db, save=False)\n",
+    "print(time.time()-start)\n",
     "# if save=True then saves resulting dataframe a pickle in ./hexcountsdf.pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -4145,7 +4156,6 @@
        "      <th>nonresidentsandnonneighbors</th>\n",
        "      <th>residents</th>\n",
        "      <th>totalcounts</th>\n",
-       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4158,7 +4168,6 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((-58.63403773176579 -34.2683973430459...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4169,7 +4178,6 @@
        "      <td>10.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>10</td>\n",
-       "      <td>POLYGON ((-58.64339994048145 -34.2718676697477...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4180,7 +4188,6 @@
        "      <td>NaN</td>\n",
        "      <td>6.0</td>\n",
        "      <td>6</td>\n",
-       "      <td>POLYGON ((-58.61431268091515 -34.2722761407819...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4191,7 +4198,6 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((-58.28815662988858 -34.9164620764708...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4202,7 +4208,6 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((-58.46230598961161 -34.5167196289263...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4216,22 +4221,15 @@
        "3 2013-12-31  89dd6b840b3ffff      1           1.0   \n",
        "4 2013-12-31  89dd6b98cb3ffff      1           1.0   \n",
        "\n",
-       "   nonresidentsandnonneighbors  residents  totalcounts  \\\n",
-       "0                          1.0        NaN            1   \n",
-       "1                         10.0        NaN           10   \n",
-       "2                          NaN        6.0            6   \n",
-       "3                          1.0        NaN            1   \n",
-       "4                          1.0        NaN            1   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-58.63403773176579 -34.2683973430459...  \n",
-       "1  POLYGON ((-58.64339994048145 -34.2718676697477...  \n",
-       "2  POLYGON ((-58.61431268091515 -34.2722761407819...  \n",
-       "3  POLYGON ((-58.28815662988858 -34.9164620764708...  \n",
-       "4  POLYGON ((-58.46230598961161 -34.5167196289263...  "
+       "   nonresidentsandnonneighbors  residents  totalcounts  \n",
+       "0                          1.0        NaN            1  \n",
+       "1                         10.0        NaN           10  \n",
+       "2                          NaN        6.0            6  \n",
+       "3                          1.0        NaN            1  \n",
+       "4                          1.0        NaN            1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4251,16 +4249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc4aaea66a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc4afc15c50>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4284,7 +4282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -4401,7 +4399,7 @@
        "4  POLYGON ((-58.46230598961161 -34.5167196289263...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
