fixup for datetime to support other format

--- a/notebooks/Start Here Complete Procedure Guide.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "<module 'my_h3_functions' from '../my_h3_functions.py'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4104,14 +4104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.422412633895874\n"
+      "1.2720601558685303\n"
      ]
     }
    ],
@@ -4125,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4149,87 +4149,87 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>time</th>\n",
        "      <th>_id</th>\n",
-       "      <th>count</th>\n",
+       "      <th>level_1</th>\n",
        "      <th>nonresidents</th>\n",
        "      <th>nonresidentsandnonneighbors</th>\n",
        "      <th>residents</th>\n",
        "      <th>totalcounts</th>\n",
+       "      <th>time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2013-12-31</td>\n",
        "      <td>89dd686e037ffff</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1388448000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2013-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2013-12-31</td>\n",
        "      <td>89dd686e0b3ffff</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1388448000000</td>\n",
        "      <td>10.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2013-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>89dd6b840b3ffff</td>\n",
+       "      <td>1388448000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2013-12-31</td>\n",
-       "      <td>89dd686eed3ffff</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>89dd6b840b3ffff</td>\n",
-       "      <td>1</td>\n",
+       "      <td>89dd6b98cb3ffff</td>\n",
+       "      <td>1388448000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2013-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>89dd6b98cb3ffff</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>89dd682f35bffff</td>\n",
+       "      <td>1388448000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013-12-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        time              _id  count  nonresidents  \\\n",
-       "0 2013-12-31  89dd686e037ffff      1           1.0   \n",
-       "1 2013-12-31  89dd686e0b3ffff     10          10.0   \n",
-       "2 2013-12-31  89dd686eed3ffff      6           NaN   \n",
-       "3 2013-12-31  89dd6b840b3ffff      1           1.0   \n",
-       "4 2013-12-31  89dd6b98cb3ffff      1           1.0   \n",
+       "               _id        level_1  nonresidents  nonresidentsandnonneighbors  \\\n",
+       "0  89dd686e037ffff  1388448000000           1.0                          1.0   \n",
+       "1  89dd686e0b3ffff  1388448000000          10.0                         10.0   \n",
+       "2  89dd6b840b3ffff  1388448000000           1.0                          1.0   \n",
+       "3  89dd6b98cb3ffff  1388448000000           1.0                          1.0   \n",
+       "4  89dd682f35bffff  1388448000000           3.0                          3.0   \n",
        "\n",
-       "   nonresidentsandnonneighbors  residents  totalcounts  \n",
-       "0                          1.0        NaN            1  \n",
-       "1                         10.0        NaN           10  \n",
-       "2                          NaN        6.0            6  \n",
-       "3                          1.0        NaN            1  \n",
-       "4                          1.0        NaN            1  "
+       "   residents  totalcounts       time  \n",
+       "0        NaN          1.0 2013-12-31  \n",
+       "1        NaN         10.0 2013-12-31  \n",
+       "2        NaN          1.0 2013-12-31  \n",
+       "3        NaN          1.0 2013-12-31  \n",
+       "4        NaN          3.0 2013-12-31  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
