Create city specific notebooks

--- a/notebooks/Start Here Complete Procedure Guide-Hong_Kong.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide-Hong_Kong.ipynb
@@ -5097,7 +5097,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('C:/Users/Emman/Desktop/HongKong_Hexes_RP.csv')"
+    "#df.to_csv('C:/Users/Emman/Desktop/HongKong_Hexes_RP.csv')"
    ]
   },
   {
