Update before major

--- a/notebooks/Shapefiles Test and Categorical Restandaridization.ipynb
+++ b/notebooks/Shapefiles Test and Categorical Restandaridization.ipynb
@@ -1645,7 +1645,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hk.to_file(\"C:/Users/emman/Box/Twitter data/Observation Shapefiles/hk.geojson\", driver='GeoJSON',encoding='UTF-8')"
+    "#hk.to_file(\"C:/Users/emman/Box/Twitter data/Observation Shapefiles/hk.geojson\", driver='GeoJSON',encoding='UTF-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bogota, Colombia \n"
    ]
   },
   {
