tract level econometrics 1

--- a/notebooks/Econometrics by typologies Buenos Aires.ipynb
+++ b/notebooks/Econometrics by typologies Buenos Aires.ipynb
@@ -50,12 +50,13 @@
    "source": [
     "The proposal is to estimate a regression model to test the hypothesis that the growth trend of tweets in tracts  in process of gentrification or at risk of gentrification were higher.\n",
     "\n",
-    "We propose a baseline specification in levels (and logs) as follows :\n",
+    "We propose a baseline specification in  logs (and levels) as follows :\n",
+    "\n",
+    "$$log(tweets) = \\beta_0 t+\\sum_j \\delta_j t Dtypo_j + \\sum_t Dyear_t+ \\sum_j Dtypo_j + \\epsilon $$\n",
+    "\n",
     "\n",
     "$$tweets = \\beta_0 t+\\sum_j \\delta_j t Dtypo_j + \\sum_t Dyear_t+ \\sum_j Dtypo_j + \\epsilon $$\n",
     "\n",
-    "\n",
-    "$$log(tweets) = \\beta_0 t+\\sum_j \\delta_j t Dtypo_j + \\sum_t Dyear_t+ \\sum_j Dtypo_j + \\epsilon $$\n",
     "\n",
     "\n",
     "\n",
