tract level data into Start here

--- a/notebooks/Start Here Complete Procedure Guide.ipynb
+++ b/notebooks/Start Here Complete Procedure Guide.ipynb
@@ -4242,7 +4242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.B Invert the coordinates of the hex_ids if necessary\n"
+    "# 8.B Invert the coordinates of the hex_ids if necessary ---DEPRECATED not necessary ANYMORE\n"
    ]
   },
   {
@@ -4364,6 +4364,87 @@
     "from h3 import h3\n",
     "df['_id']=df['_id'].apply(lambda row:  rotate_hex_coordinates(row))\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 9 Compute aggregates at the tract level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to recover counts at the tract level, first use centroids to spatially match the tract level shapes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfcentroids=myh3.df_with_hexid_to_centroids_gdf(df, hexcolname='_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Spatial Join\n",
+    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
+    "tracts = gpd.read_file(currentdir+'/../data/radios_amba_2010.shp')\n",
+    "tracts=tracts.to_crs({'init': 'epsg:4326'})\n",
+    "\n",
+    "# Spatial Join between centroids and census track shapes\n",
+    "dfcentroids=gpd.sjoin(dfcentroids, tracts, how=\"inner\", op='intersects')\n",
+    "\n",
+    "# Since in my case I do not have the typologies with the census tract data, I still need to merge it by censustrackid\n",
+    "typologies=pd.read_excel(currentdir+'/../data/tipologias/'+'tipologias.xlsx')\n",
+    "\n",
+    "\n",
+    "typologies.loc[typologies['TYPE']=='GDV','TYPE' ]=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='GD','TYPE']=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='GV','TYPE']=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='G','TYPE']=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='DV','TYPE']=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='D','TYPE']=\"Low Income, Undergoing Change\"\n",
+    "typologies.loc[typologies['TYPE']=='VE','TYPE']=\"Exclusive Dynamic\"\n",
+    "typologies.loc[typologies['TYPE']=='V','TYPE']=\"Low Income, At Risk of Change\"\n",
+    "typologies.loc[typologies['TYPE']=='E','TYPE']=\"Exclusive Static\"\n",
+    "\n",
+    "\n",
+    "dfcentroids=dfcentroids.merge(typologies[['COD_2010','TYPE']], left_on='cod_radio', right_on='COD_2010')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aggregating the data at the tract level\n",
+    "#COD_2010 corresponds to the tract level code id from Buenos Aires\n",
+    "\n",
+    "df_tract_level=dfcentroids[['nonresidents','nonresidentsandnonneighbors','residents','totalcounts','COD_2010','time']].groupby(['COD_2010','time']).sum().reset_index()\n",
+    "typologies_code=dfcentroids[['COD_2010','TYPE']].drop_duplicates()\n",
+    "df_tract_level=df_tract_level.merge(typologies_code, left_on='COD_2010', right_on='COD_2010')\n",
+    "df_tract_level.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Insert tract level data to database, just to not repeat the process.\n",
+    "#db.tract_level_counts.insert_many(df_tract_level.to_dict('records'))"
    ]
   },
   {
