Updates to fork

--- a/notebooks/Sydney/descriptives.ipynb
+++ b/notebooks/Sydney/descriptives.ipynb
@@ -14,10 +14,12 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../\") \n",
+    "sys.path.append(\"../../py_func_NoEnvReq\") \n",
     "import communicationwmongo as commu\n",
     "import home_location as home\n",
-    "db=commu.connecttoLocaldb(database='Twitter_Data') \n",
+    "uri = \"mongodb://emmanuel:emaUCber@3.14.72.122:27017/twitter?authSource=twitter&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=false\"\n",
+    "client = pymongo.MongoClient(uri)\n",
+    "db = client['sydney']\n",
     "import analysis as a\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -693,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
